--- a/HubbleDiagramPlot.ipynb
+++ b/HubbleDiagramPlot.ipynb
@@ -19,9 +19,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Change the values in the lists below to the radial velocities and distances that you've estimated, leaving the zeros.\n",
-    "radvel = [0.0,200.0,500.0,750.0,1000.0,1500.0]\n",
-    "dist = [0.0,9.2,23.0,34.5,46.0,69.0]"
+    "#Change the x and y values in the lists below to the radial velocities (x) and distances (y) that you've estimated.\n",
+    "radvel = [0.0,x1,x2,x3,x4,x5]\n",
+    "dist = [0.0,y1,y2,y3,y4,y5]"
    ]
   },
   {
@@ -44,11 +44,12 @@
    "source": [
     "plt.scatter(dist,radvel)\n",
     "\n",
-    "#change the numbers in the plot below to draw your best-fit line through your data points. Don't change the zeros.\n",
-    "plt.plot([0.0,80.0],[0.0,1700.0])\n",
+    "#replace the x and y below below to values that will draw a best-fit line through your data points.\n",
+    "plt.plot([0.0,x],[0.0,y])\n",
     "\n",
-    "plt.xlim(0.0,80.0)\n",
-    "plt.ylim(0.0,1750.0)\n",
+    "#replace xmax and ymax with values that will set suitable limits for your graph \n",
+    "plt.xlim(0.0,xmax)\n",
+    "plt.ylim(0.0,ymax)\n",
     "\n",
     "plt.xlabel('Distance (Mly)')\n",
     "plt.ylabel('Radial velocity (km/s)')\n",
